--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -14,12 +14,12 @@
 \usepackage{tikz}
 \usepackage[plainpages=false,debug]{hyperref} % should be last package
 
-\usepackage{fancyhdr}
-
-\fancyfoot{}
-\fancyhead[RO,LE]{\thepage}
-\fancyhead[LO]{\leftmark}
-\fancyhead[RE]{\rightmark}
+%\usepackage{fancyhdr}
+%
+%\fancyfoot{}
+%\fancyhead[RO,LE]{\thepage}
+%\fancyhead[LO]{}
+%\fancyhead[RE]{}
 
 \setlist{nosep} % tighten itemized lists
 
@@ -63,13 +63,21 @@
 \newcommand\p{\stepcounter{parcount}\leavevmode{\small[\parnum]}\hspace{0.2em}}
 \newcommand\cp{\setcounter{parcount}{0}}
 
-\newcommand{\curcom}{\index{Committees!Curriculum}\color{diColor}Curriculum Committee\color{black}\xspace}
 
-\newcommand{\advcom}{\index{Committees!Advisory}\color{diColor}Advisory Committee\color{black}\xspace}
-
-\newcommand{\gocom}{\index{Committees!Graduate Oversight}\color{diColor}Graduate Oversight Committee\color{black}\xspace}
-
-\newcommand{\FGS}{\index{Faculty of Graduate Studies (FGS)}FGS}
+% Use macros to get indexing, and ensure uniform representation
+\newcommand{\curcom}{\index{Committees!Curriculum}Curriculum Committee\xspace}
+\newcommand{\advcom}{\index{Committees!Advisory}Advisory Committee\xspace}
+\newcommand{\gocom}{\index{Committees!Graduate Oversight}Graduate Oversight Committee\xspace}
+%\newcommand{\GC}{\index{Graduate Coordinator}Graduate Coordinator\xspace}
+\newcommand{\GC}{Graduate Coordinator\xspace}
+%\newcommand{\GS}{\index{Graduate Secretary}Graduate Secretary\xspace}
+\newcommand{\GS}{Graduate Secretary\xspace}
+\newcommand{\formAPR}{\index{forms!Annual Progress Report}Annual Progress Report Form\xspace}
+\newcommand{\formGSP}{\index{forms!Graduate Student Program}Graduate Student Program Form\xspace}
+\newcommand{\formGSPU}{\index{forms!Graduate Student Program}Graduate Student Program Update Form\xspace}
+\newcommand{\formSPRF}{\index{forms!Supplementary Program Report}Supplementary Program Report Form\xspace}
+\newcommand{\formST}{\index{forms!Sea Time}Sea Time Form\xspace}
+\newcommand{\FGS}{\index{Faculty of Graduate Studies (FGS)}FGS\xspace}
 
 \setlength{\parskip}{0.7ex plus 0.5ex minus 0.2ex}
 
@@ -106,6 +114,7 @@
         }
     }
 
+%\renewcommand*\contentsname{}
 
 \makeindex
 
@@ -113,10 +122,11 @@
 \author{}
 \date{September, 2016}
 
-\pagestyle{fancy}
 
 \begin{document}
+\clearpage
 \maketitle
+\thispagestyle{empty}
 
 \textbf{Disclaimer.} The guidelines in this handbook supplement, but do not,
 and cannot, reduce the requirements listed in the rules and regulations
@@ -130,11 +140,18 @@ shall prevail.
 \newpage
 
 \renewcommand{\baselinestretch}{0.5}\normalsize
+
+\pagenumbering{roman}
 {\footnotesize
 \setcounter{tocdepth}{2}
 \tableofcontents
 }
+\thispagestyle{empty}
 \renewcommand{\baselinestretch}{1.0}\normalsize
+
+\pagenumbering{arabic}
+%\pagestyle{fancy}
+\setcounter{page}{0}
 
 \section{\label{sec:glossary}Glossary of acronyms and terms}
 
@@ -156,6 +173,7 @@ document.
         Council, a funding agency.
 
 \end{itemize}
+
 
 % A.	GENERAL  PROGRAM REQUIREMENTS
 \section{\label{sec:general_program_requirements}General Program Requirements}
@@ -281,11 +299,10 @@ Studies Academic Calendar
 \href{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2677&loaduseredits=False}{\ExternalLink}.}.
 
 
-\p A \di{Graduate Student Program Form} must be submitted to the Graduate
-Secretary within one month of the start of your program.  Students must submit
-a \di{Graduate Student Program Update Form} to the Graduate Secretary when a
-decision to make changes to course requirements is made\footnote{Graduate
-Student Program Forms can be downloaded from the FGS website
+\p A \formGSP must be submitted to the \GC within one month of the start of
+your program.  Students must submit a \formGSPU to the \GS when a decision to
+make changes to course requirements is made\footnote{Graduate Student Program
+Forms can be downloaded from the FGS website
 \href{http://www.dal.ca/faculty/gradstudies/currentstudents/forms.html}{\ExternalLink}.}.
 Failure to do so can result in the assessment of additional fees for courses
 not included in your program requirements, or affect the student's ability to
@@ -316,7 +333,7 @@ apply, in writing, to the department for immediate reinstatement\footnote{FGS
 Regulations, section~5.4.1: Readmission of Students
 \href{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10848&loaduseredits=False}{\ExternalLink}.}.
 Reinstatement to a program after a failing grade must be supported by the
-Graduate Coordinator, and must be approved in writing by the Faculty of
+\GC, and must be approved in writing by the Faculty of
 Graduate Studies. If readmitted, any subsequent 'F' will result in a final
 program dismissal. Any academic withdrawal and reinstatement will be recorded
 on the student's official transcript.
@@ -337,8 +354,8 @@ the class is not available at Dalhousie\footnote{FGS Regulations, section
 The Letter of Permission Form\footnote{FGS forms and documents: Letter of
 Permission--Request Form
 \href{http://www.dal.ca/faculty/gradstudies/currentstudents/forms.html}{\ExternalLink}.}
-must be completed and submitted to the Graduate Secretary in advance. Such
-approval will not be given retroactively.
+must be completed and submitted to the \GC in advance. Such approval will not
+be given retroactively.
 
 
 %A3	THESIS PROPOSAL
@@ -406,9 +423,8 @@ the research cruise. In general \fixme{is this phrase ok? Another choice might
 be ``normally'' or ``usually.'' I think CTT has expressed opinions on how to
 phrase such things.} ``sea time'' means spending 3 or more nights at sea on a
 research vessel that is conducting active research. Students are required to
-submit a \index{forms!sea time}\di{Sea Time Form} to the Graduate Secretary
-after completion of this requirement, and the \curcom must approve completed
-forms.
+submit a \formST to the \GS after completion of this requirement, and the
+\curcom must approve completed forms.
 
 \p In a limited set of extenuating circumstances, students may have the
 sea-time requirement waived and replaced with commensurate experience. For
@@ -458,25 +474,23 @@ Secretary regarding the required documentation.
 
 \cp
 
-\p Students must submit an \di{Annual Progress Report} each year, one month prior
-to the anniversary of their admission date. Failure to submit this report will
-result in delays in registration and funding.
+\p Students must submit an \formAPR each year, one month prior to the
+anniversary of their admission date. Failure to submit this report will result
+in delays in registration and funding.
 
 \p This report is made with the Graduate Student Information System (GSIS)
 through DalOnline\footnote{DalOnline
-\href{https://dalonline.dal.ca}{\ExternalLink}.}.  The supervisor and the
-Graduate Coordinator must approve this report electronically, and students
-should bear this in mind so that the deadline can be met.
+\href{https://dalonline.dal.ca}{\ExternalLink}.}.  The supervisor and the \GC
+must approve this report electronically, and students should bear this in mind
+so that the deadline can be met.
 
-\p A hard copy of the Oceanography ``\di{supplementary program report form}''
-(available from the Graduate Secretary) must also be approved by your
-supervisor and the Graduate Coordinator, and submitted to the Graduate
-Secretary annually, following the same deadline as the Annual Progress Report.
+\p A hard copy of the Oceanography \formSPRF (available from the GS) must also
+be approved by your supervisor and the \GC, and submitted to the \GS annually,
+following the same deadline as the \formAPR.
 
-\p The \di{supplementary program report form} is intended to be saved
-electronically and added to on a regular basis, similar to a CV. An up-to-date
-copy of the \di{supplementary program report form} is to be brought to all
-meetings with the Graduate Coordinator.
+\p The \formSPRF is intended to be saved electronically and added to on a
+regular basis, similar to a CV. An up-to-date copy of the \formSPRF is to be
+brought to all meetings with the \GC.
 
 
 %A8	TIME LIMITS FOR COMPLETION OF DEGREES
@@ -513,14 +527,16 @@ from their initial registration in the program.
 
 \p A supervisor is changed only with the approval of the Department. This may
 arise by mutual agreement within the advisory committee or at the request of
-the student (to either the Graduate Coordinator or the Chair of the
-Department).
+the student (to either the \GC or the Chair of the Department).
 
 \p In order to take advantage of the special expertise and facilities available,
 the role of supervisor is not restricted to permanent faculty members of the
 Department. However, supervisors must be Adjunct Professors or Full Professors
 with Faculty of Graduate Studies membership in Oceanography.\fixme{check on the
 rules, probably citing an FGS table}
+
+\subsection{Internal supervisor}
+\cp
 
 \p In the case where a student has a supervisor who is not a full time faculty
 member in the Department of Oceanography, there must be an internal supervisor
@@ -554,23 +570,21 @@ who is a faculty member in the Department. The responsibilities of the
 
 
 %A9	THESIS ADVISORY COMMITTEE
-\subsection{Advisory committee}
+\subsection{Advisory committee structure}
 
 \cp
 
 \p The \advcom must be formed within one month of the start of the student's
 program.
 
-\p The supervisor will select a provisional committee, in
-consultation with the student. A \di{Graduate Student
-Program Form} listing the \advcom members must be
-submitted to the Graduate Secretary.
+\p The \index{supervisor} will select a provisional committee, in consultation
+with the student. A \formGSP listing the \advcom members must be submitted to
+the \GS.
 
 \p Membership on an \advcom is flexible and may change during the course of a
-student's program. Students must complete a \di{Graduate Student Program Update
-Form} when a decision to make changes to committee membership is made. The
-\advcom structure differs for MSc and PhD, as explained in
-sections~\ref{sec:msc_program_requirements} and
+student's program. Students must complete a \formGSPU when a decision to make
+changes to committee membership is made. The \advcom structure differs for MSc
+and PhD, as explained in sections~\ref{sec:msc_program_requirements} and
 \ref{sec:phd_program_requirements}.
 
 % above was: sections B and C
@@ -580,20 +594,22 @@ both to provide expert advice to students and to evaluate and report on student
 progress.
 
 \p All committee members must have Faculty of Graduate Studies membership (most
-commonly as an \di{External Scholar}). Memberships should be applied for through the
-Graduate Secretary.
+commonly as an \di{External Scholar}). Memberships should be applied for
+through the \GS.
 
-\p Committees are changed by mutual consent within the committee or by the Chair
-of the committee and student in consultation with the Graduate Coordinator or
-Chair of the Department. Limits to changes are set by the availability of
-particular people as supervisors and of research facilities and funds (noting
-that most research grants are awarded for specific projects).
+\p Committees are changed by mutual consent within the committee or by the
+Chair of the committee and student in consultation with the \GC or Chair of the
+Department. Limits to changes are set by the availability of particular people
+as supervisors and of research facilities and funds (noting that most research
+grants are awarded for specific projects).
 
 %A9.1	ADVISORY COMMITTEE MEETINGS
 %\subsection{Advisory committee meetings}
 %
 %\cp
 
+\subsection{Advisory committee meeting schedule}
+\cp
 \p There must be no less than two advisory committee meetings held per academic
 year\footnote{FGS Regulations, section 9.3: Supervisory Committees
 \href{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10852&loaduseredits=False}{\ExternalLink}.}
@@ -601,11 +617,10 @@ year\footnote{FGS Regulations, section 9.3: Supervisory Committees
 \p Advisory committee meetings may be held as often as required by the student
 and/or supervisor. It is the responsibility of the student to ensure that
 committee meetings are held. The supervisor will ensure that brief minutes of
-these meetings are recorded and are filed with the Graduate Secretary.
+these meetings are recorded and are filed with the \GS.
 
-\p Following approval of the \di{research proposal} by the \advcom, the student
-should have several meetings in addition to the regular committee meetings as
-follows:
+\p Following approval of the thesis proposal by the \advcom, the student should
+have several meetings in addition to the regular committee meetings as follows:
 
 \begin{itemize}
 
@@ -631,9 +646,10 @@ committee may request further revision prior to approving a defence.
 \p At several points in a student's program the approval of the advisory committee is essential:
 \begin{itemize}
 \item Initial discussion of research plan and direction; this should occur as early as possible in the student's program.
-\item Approval of research plan and direction for \di{thesis proposal}.
-\item Acceptance of a \di{thesis proposal}.
-\item Change of status, such as advancement to the PhD program.
+\item Approval of research plan and direction for thesis proposal (see sections~\ref{sec:msc_thesis_proposal}
+    and~\ref{sec:phd_thesis_proposal}.
+\item Acceptance of a thesis proposal.
+\item Change of status, such as advancement to the PhD program (see section~\ref{sec:transfer_to_phd}).
 \item Approval to write up sections of a thesis.
 \item Approval of draft of thesis.
 \item The acceptance of the thesis, in final form, as being ready for defence.
@@ -690,9 +706,8 @@ of a proposal.
 
 \p The Supervisor will notify the Oceanography Office that the \di[thesis
 proposal!MSc]{proposal} requirement has been satisfied and a copy of the
-approved proposal must be placed on file with the Graduate Secretary. MSc
-students may be required to defend the research proposal at the discretion of
-their committee.
+approved proposal must be placed on file with the \GC. MSc students may be
+required to defend the research proposal at the discretion of their committee.
 
 \p Because a large portion of a student's first year is consumed by course
 work, the \di[thesis proposal!MSc]{thesis proposal} serves primarily as a
@@ -747,11 +762,10 @@ committee due to short-term absence of committee members.
         \end{itemize}
 
     \item Departmental Representative/Chair (from outside the
-        committee)\footnote{The Graduate Secretary will arrange for the
-        Departmental Representative (normally the Graduate Coordinator or a
-        designate). The Chair of the MSc thesis defence is independent of the
-        examining committee. The Departmental Representative normally performs
-        this duty.}
+        committee)\footnote{The \GS will arrange for the Departmental
+        Representative (normally the \GC or a designate). The Chair of the MSc
+        thesis defence is independent of the examining committee. The
+        Departmental Representative normally performs this duty.}
 
     \item External examiner from outside the advisory
         committee\footnote{Adjunct professors may fulfill the requirement of an
@@ -785,7 +799,7 @@ reviewed for suitability and final approval.
                 Secretary
 
             \item Submit a Thesis Binding Submission Form and payment to the
-                Graduate Secretary
+                \GS
 
             \item Submit an electronic copy of the abstract to the Graduate
                 Secretary
@@ -799,14 +813,14 @@ reviewed for suitability and final approval.
 
         \begin{itemize}
 
-            \item Notify the Graduate Secretary of any Audiovisual requirements
+            \item Notify the \GS of any Audiovisual requirements
 
         \end{itemize}
 
     \item Two weeks prior to defence:
         \begin{itemize}
 
-            \item Submit a printed copy of the thesis to the Graduate Secretary
+            \item Submit a printed copy of the thesis to the \GS
 
         \end{itemize}
 
@@ -830,9 +844,9 @@ reviewed for suitability and final approval.
                 signatures, Copyright Page, Ethics Pages (if applicable),
                 Student Contribution to Manuscripts (if applicable)
 
-            \item Submit final copies of thesis to the Graduate Secretary for
-                binding (include copies of the signed signature page, and the
-                Copyright Page with original signatures)
+            \item Submit final copies of thesis to the \GS for binding (include
+                copies of the signed signature page, and the Copyright Page
+                with original signatures)
 
             \item Complete Exit Survey
 
@@ -860,7 +874,7 @@ Departmental Representative, who will vote only in the event of a tie.
 the examining committee indicating the nature of any corrections to be made and
 the time frame within which they are to be completed. In the event of an
 unsuccessful defence, an explanation of the negative outcome is provided. A
-copy of the report will be provided to the Graduate Secretary.
+copy of the report will be provided to the \GS.
 
 \subsection{\label{sec:transfer_to_phd}Transfer to PhD}
 
@@ -876,10 +890,9 @@ the reason for the transfer, and justification that they are qualified for the
 PhD program. A one-page explanation is sufficient. The student's \advcom is
 required to meet, and the committee may recommend advancement to the PhD
 program. A letter from the supervisor, justifying the advancement of the
-student to the PhD program, should be submitted to the Graduate Coordinator
-along with the student's letter no later than one month prior to the
-anniversary of the student's admission date. The \gocom will then review the
-request.
+student to the PhD program, should be submitted to the \GC along with the
+student's letter no later than one month prior to the anniversary of the
+student's admission date. The \gocom will then review the request.
 
 \p The decision categories for the transfer to the PhD are:
  \begin{itemize}
@@ -1009,9 +1022,9 @@ document a compelling conflict, e.g. \di{fieldwork}.
 
 \p The examination committee has at least 4 members, including a faculty member
 from outside the sub- discipline, and a departmental representative who acts as
-chair. The Graduate Secretary will arrange for the Departmental Representative
-(normally the Graduate Coordinator or a designate). The composition of the rest
-of the examining committee is set by the sub-discipline.
+chair. The \GS will arrange for the Departmental Representative (normally the
+\GC or a designate). The composition of the rest of the examining committee is
+set by the sub-discipline.
 
 \p The topics of the examination are student-specific, and may include items of a
 general oceanographic nature (tailored to the courses taken) as well as items
@@ -1199,10 +1212,10 @@ distributed to all members of the Oceanography Department and will be posted.
 
 \cp
 
-\p The examining committee is selected by the supervisory committee, and consists
-of members from that committee, external members, and a departmental
-representative. The Graduate Secretary will arrange for the Departmental
-Representative (normally the Graduate Coordinator or a designate).
+\p The examining committee is selected by the supervisory committee, and
+consists of members from that committee, external members, and a departmental
+representative. The \GS will arrange for the Departmental Representative
+(normally the \GC or a designate).
 
 \p The Chair of the PhD proposal defence is independent of the examining
 committee. The Departmental Representative normally performs this duty.
@@ -1238,9 +1251,9 @@ standing in the program.
 
 \cp
 
-\p Based on both the written proposal and oral defence, the supervisor will notify
-the Graduate Secretary, Graduate Coordinator, student, and examining committee
-in writing of one of the four possible outcomes:
+\p Based on both the written proposal and oral defence, the supervisor will
+notify the \GS, \GC, student, and examining committee in writing of one of the
+four possible outcomes:
 
 \begin{itemize}
 \item Continuation in the PhD program
@@ -1298,14 +1311,15 @@ members, following the committee structure guidelines.
 
     \end{itemize}
 
-\item Departmental Representative (from outside the committee)\footnote{The
-    Graduate Secretary will arrange for the Departmental Representative
-        (normally the Graduate Coordinator or a designate).}
+\item A Departmental Representative, from outside the committee.  The Graduate
+    Secretary will arrange for the Departmental Representative, normally the
+    Graduate Coordinator or a designate.
 
 \item External examiner (from outside the University)
 
-    \item Chair\footnote{The Chair of the PhD thesis defence is independent of the
-        examining committee. The Faculty of Graduate Studies will appoint the Chair.}
+    \item Chair\footnote{The Chair of the PhD thesis defence is independent of
+        the examining committee. The Faculty of Graduate Studies will appoint
+        the Chair.}
 
 \end{itemize}
 
@@ -1323,6 +1337,7 @@ defence.
 final form) should be distributed to the supervisor and committee to be
 reviewed for suitability and final approval.
 
+
 \begin{itemize}
     \item Twelve weeks prior to defence:
 
@@ -1330,7 +1345,7 @@ reviewed for suitability and final approval.
 
             \item Submit Request to Arrange an Oral Defence Form, listing 3
                 choices for external examiners along with CV for external
-                examiner of first choice to the Graduate Secretary.
+                examiner of first choice to the \GS.
 
         \end{itemize}
 
@@ -1342,15 +1357,15 @@ reviewed for suitability and final approval.
                 distributed to the examining committee
 
             \item Submit a PhD Thesis Submission From and copy of the thesis
-                for the External Examiner to the Graduate Secretary
+                for the External Examiner to the \GS 
 
             \item Submit a PhD Examination Information Form to the Graduate
                 Secretary
 
-            \item Submit a copy of the student's CV to the Graduate Secretary
+            \item Submit a copy of the student's CV to the \GS 
 
             \item Submit a Thesis Binding Submission Form and payment to the
-                Graduate Secretary
+                \GS
 
             \item Submit an electronic copy of the abstract to the Graduate
                 Secretary
@@ -1364,7 +1379,7 @@ reviewed for suitability and final approval.
 
         \begin{itemize}
 
-            \item Notify the Graduate Secretary of any Audiovisual requirements
+            \item Notify the \GS of any Audiovisual requirements
 
         \end{itemize}
 
@@ -1372,7 +1387,7 @@ reviewed for suitability and final approval.
         
         \begin{itemize}
 
-            \item Submit a printed copy of the thesis to the Graduate Secretary
+            \item Submit a printed copy of the thesis to the \GS 
 
         \end{itemize}
 
@@ -1392,14 +1407,14 @@ reviewed for suitability and final approval.
                 DalSpace\footnote{DalSpace
                 \href{http://dalspace.library.dal.ca/}{\ExternalLink}.}.
 
-            \item Submit original completed forms to FGS (National Library of
+            \item Submit original completed forms to \FGS (National Library of
                 Canada Form, Title Page of Thesis, Signature page with original
                 signatures, Copyright Page, Ethics Pages (if applicable),
                 Student Contribution to Manuscripts (if applicable)
 
-            \item Submit final copies of thesis to the Graduate Secretary for
-                binding (include copies of the signed signature page, and the
-                Copyright Page with original signatures)
+            \item Submit final copies of thesis to the \GS for binding (include
+                copies of the signed signature page, and the Copyright Page
+                with original signatures)
 
             \item Complete Exit Survey
 
@@ -1464,22 +1479,19 @@ do not interfere with program expectations.
 
 
 %D1	FGS CONFERENCE TRAVEL GRANT
-\subsection{FGS conference travel grant}
+%\subsection{FGS conference travel grant}
 
-\cp
 
-\p Applications must be submitted through the Graduate Secretary at least one
-month prior to the date of travel.
-
-\p Graduate students are eligible to apply for one travel grant per degree at
-Dalhousie (Master's or Doctoral) through the Faculty of Graduate
-Studies\footnote{FGS Conference Travel Grant Application Form and Guidelines
+\p
+Graduate students are eligible to apply for one \di{travel grant} per degree at
+Dalhousie (Master's or Doctoral) through the \FGS\footnote{FGS Conference
+Travel Grant Application Form and Guidelines
 \href{http://www.dal.ca/faculty/gradstudies/funding/grants.html}{\ExternalLink}.}.
-
-\p Students must be registered in a graduate program at the time of application
-and at the time of the conference. In order to be eligible, students must
-present a poster of paper based on the results of their graduate thesis
-research at a national or international scholarly meeting or conference.
+Applications must be submitted through the \GS at least one month prior to the
+date of travel.  Students must be registered in a graduate program at the time
+of application and at the time of the conference. In order to be eligible,
+students must present a poster of paper based on the results of their graduate
+thesis research at a national or international scholarly meeting or conference.
 Departmental approval must be given to these applications.
 
 
@@ -1492,7 +1504,7 @@ Departmental approval must be given to these applications.
 -- check into it}  a policy on Intellectual Property, which will be available
 on the Faculty of Graduate Studies website.  If students and/or faculty have
 concerns or doubts about any issue pertaining to any part of Section 6, consult
-with your Chair, Graduate Coordinator, or Supervisor, or contact the Faculty of
+with your Chair, \GC, or Supervisor, or contact the Faculty of
 Graduate Studies for advice. If you feel uncomfortable with approaching your
 immediate supervisor, then go to the next level and ask to be heard in
 confidence\footnote{FGS Regulations, section 6.4: Policy on Intellectual
@@ -1518,6 +1530,7 @@ section 6.3: Policy on Integrity in Scholarly Activity
 \href{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10849&loaduseredits=False}{\ExternalLink}.}.
 
 %\include{appeals}
+
 
 \section{Procedures for Student Academic Appeals}
 %and Governance of the Ad Hoc Appeal Committee}
@@ -1553,6 +1566,8 @@ Security or Law Enforcement should be involved.
 \p There are no appeals on admission decisions, including transfers to
 the PhD program.  
 
+%\end{document}
+
 \subsection{\label{sec:basis_for_an_appeal} Basis for an Appeal}
 
 \cp
@@ -1577,6 +1592,8 @@ the University Registrar's Office.
 the onus is on the appellant to prove, through factual documentation, that such
 conditions existed. 
 
+%\end{document}
+
 \begin{enumerate}
 
     \item Procedural Unfairness.  (This means that the method used to
@@ -1600,7 +1617,6 @@ conditions existed.
         deliverable of the process could not reasonably be expected of a person
         who undertakes assiduously, genuinely, and accurately the steps leading
         to completion of that process.) 
-
 
 \end{enumerate}
 
@@ -1664,6 +1680,8 @@ will communicate the decision in writing to the appellant.
 the Faculty of Science (undergraduates) or the Faculty of Graduate Studies
 (graduate students), or Senate, as regulations in those administrative units
 specify. 
+
+%\end{document}
 
 
 \subsection{\label{sec:the_ad_hoc_appeal_panel}The Ad Hoc Appeal Panel}
@@ -1743,9 +1761,9 @@ that rebuttal to the appellant.
 
 \end{enumerate}
 
-\p The Chair of the Panel will communicate, in writing, the decision of
-the Panel within 3 working days (except for serious time conflicts such as
-noted those mentioned at \ref{sec:the_ad_hoc_appeal_panel}.7 above).
+\p The Chair of the Panel will communicate, in writing, the decision of the
+Panel within 3 working days (except for serious time conflicts such as noted
+those mentioned at \ref{sec:the_ad_hoc_appeal_panel}.7 above).\fixme{cross ref}
 
 \p In an appeal process, the student has the right to representation.
 The student is required to inform the Chair of the Panel, in writing, if s/he
@@ -1762,6 +1780,7 @@ party of the witness(es).
 Hearing.  A person providing aid to someone with a disability is permitted, as
 is a translator, but such persons cannot testify at a Hearing.
 
+%\end{document}
 
 \subsection{Supplementary Points}
 
@@ -1784,56 +1803,7 @@ graduate student will be referred directly to the Faculty of Graduate Studies
 for resolution.  
 
 
-% \subsection{\label{sec:grade_reassessment}Grade Reassessment (Re-grading)}
-% 
-% \fixme{Earlier, it says we just follow university rules. It seems best to do
-% that, rather than to write something here that could be wrong. I confess I
-% don't really understand the system of the two levels. What I read here is
-% consistent with what I've seen done in the past (e.g. I regraded an exam for
-% Barry Ruddick's class, once).}
-% 
-% \npara{1} A request to re-grade a written exam or test follows the procedures
-% set by the University's Registrar.
-% 
-% \npara{2} A grade cannot be both reassessed via the Registrar's Office and
-% appealed to the Department, under the rules in this document.  A student must
-% choose one procedure or the other, as they are mutually exclusive.  Under
-% normal circumstances a student should ask for a re-grading, unless there is
-% evidence of bias, irregularity, unfairness in the administration of the exam,
-% or inappropriate expectation.   
-% 
-% \npara{3} When the Department receives a re-grading request, the instructor of
-% the course will prepare the following materials:
-% 
-% \begin{enumerate}
-% 
-% \item  A list of at least two independent other professors (including contact
-% information), either within or outside of the University, who are sufficiently
-% knowledgeable of the topic in question, so as to be suitable to re-grade the
-% exam.  (Real and apparent conflicts of interest must be avoided in choosing
-% these re-assessors.) 
-% 
-% \item A copy of the exam in question, along with a template of ``optimal''
-%     answers for each question.
-% 
-% \item Copies of at least one student-completed exam at both the A and B grade
-% levels, fully de-personalized.  
-% 
-% \item A fully de-personalized copy of the completed exam being re-graded.
-% 
-% \end{enumerate}
-% 
-% \npara{4} The above materials will be given to the Chair of the Department who
-% will then contact the re-assessors and forward the materials if they accept the
-% re-grading task.  The re-grading should be complete within two weeks of receipt
-% of the material by the re-assessors.  
-% 
-% \npara{5} Communication of the results of the re-assessment will follow
-% Registrar procedures.   
-% 
-
-
-
+\addcontentsline{toc}{section}{Index}
 \printindex
 
 \end{document}
