--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -1035,6 +1035,9 @@ research.
 \subsubsection{Format and guidelines}
 
 %C3.2.1  BIOLOGICAL OCEANOGRAPHY QE GUIDELINES
+
+\input{BO_Qualifying_Aug2013_draft.tex}
+
 \paragraph{Biological Oceanography QE guidelines}\hfill
 
 \cp
