start work on qe

--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -120,7 +120,7 @@
 
 \title{Oceanography Graduate Handbook}
 \author{}
-\date{September, 2016}
+\date{February, 2017 [focus on QE]}
 
 
 \begin{document}
@@ -450,7 +450,8 @@ seminars regularly must have the specific agreement of their \advcom that this
 requirement is waived and this must be communicated to the departmental office
 in a written memo signed by the supervisor. It is important to note that
 materials presented in these seminars may form part of the questions for the
-PhD Qualifying Exam and the PhD Thesis Proposal Defence.
+\di{PhD Qualifying Exam} (Section~\ref{sec:phd_qualifying_examination})
+and the \di{PhD Thesis Proposal Defence} (Section~\ref{sec:phd_thesis_proposal}).
 
 
 
@@ -998,188 +999,7 @@ least one member of the committee be from outside the Department.
 %C3	PhD QUALIFYING EXAMINATION
 \subsection{\label{sec:phd_qualifying_examination}PhD Qualifying Examination}
 
-\cp
-
-\p The \di{qualifying examination} should be completed between months 9 and 12 of
-the program.  Students transferring from the MSc program should take the
-qualifying examinations within 12 months of their transfer.
-
-\p This examination is designed to assess the student's background knowledge, with
-the primary aim of identifying weaknesses that need to be addressed in order
-for a student to undertake research at the Ph.D. level in the chosen field. The
-format varies with sub-discipline. In each case there is an oral component, but
-in some cases there can also be a written assignment before or after the oral
-examination.
-
-\p The \curcom  may grant extensions up to month 15 if the student and supervisor
-document a compelling conflict, e.g. \di{fieldwork}.
- 
-
-%C3.1	QUALIFYING EXAMINATION COMMITTEE
-\subsubsection{Qualifying Examination committee}
-
-\cp
-
-\p The examination committee has at least 4 members, including a faculty member
-from outside the sub- discipline, and a departmental representative who acts as
-chair. The \GS will arrange for the Departmental Representative (normally the
-\GC or a designate). The composition of the rest of the examining committee is
-set by the sub-discipline.
-
-\p The topics of the examination are student-specific, and may include items of a
-general oceanographic nature (tailored to the courses taken) as well as items
-that are more tightly focused on the sub-discipline and the intended area of
-research.
-
-%C3.2	FORMAT AND GUIDELINES
-\subsubsection{Format and guidelines}
-
-%C3.2.1  BIOLOGICAL OCEANOGRAPHY QE GUIDELINES
-
-\input{BO_Qualifying_Aug2013_draft.tex}
-
-\paragraph{Biological Oceanography QE guidelines}\hfill
-
-\cp
-\p The core of the qualification process is an oral examination based on a reading
-list tailored to the student's research area. In some cases this may be
-followed by a written examination. The details and the timing are as follows.
-
-\begin{enumerate}
-
-\item The PhD candidate prepares a brief (2-3 page) summary of his or her
-research interests and sends it to the BO faculty. The student's summary of
-research interests guides faculty members in the selection of papers; it will
-not be used as source material during the exam, and neither the student nor the
-committee members bring copies of the research summary to the exam.
-
-\item Based on this document, at least 3 of the available BO faculty members
-(including the supervisor) each contribute one or two papers or book chapters
-to a reading list. These papers are intended to serve as guides for the exam
-and to provide entry points for discussions of oceanographic topics during
-questioning. The process is organized by the research supervisor, who vets the
-papers to ensure appropriateness, and then communicates the list to the student
-and the BO faculty within 2 weeks of receipt of the student's research summary.
-
-\item It is the responsibility of the candidate's supervisor to: a) form the
-Examining Committee; and b) schedule the exam. The committee will include a
-Chair, at least three members of the BO faculty, and one Oceanography faculty
-member from out of the BO sub-discipline, preferably in the sub-discipline most
-closely related to the student's research. The Chair (a member of the
-Oceanography faculty not in BO) will serve as moderator of the exam and will
-not ask questions. 3 members of the BO group must approve the form of the
-examining committee no later than 3 weeks prior to the date of the exam. The
-composition of the committee will be revealed to the student and the student
-will see that each member has copies of the readings.
-
-\item Within 6 weeks after the reading list is given to the student, an oral
-examination is held.
-
-\item The exam begins with a 20-minute presentation by the student,
-highlighting aspects of the papers or chapters that are relevant to his or her
-research interests.
-
-\item During the next 1-1.5~h, the committee asks questions about oceanography
-and topics related to the students research interests. Entry points into
-questions and discussions are to be based on the reading material that was
-provided to the student and by the student's presentation.
-
-\item After the exam, the committee meets in camera to agree on comments and
-recommendations to the student and to the students committee, as appropriate.
-
-\item The possible outcomes of the oral examination are:
-\begin{itemize}
-\item The candidate passes without extra conditions.
-
-\item The candidate passes, but is informed of weaknesses that should be
-addressed during the PhD work, e.g. in courses or in directed studies.
-
-\item The candidate is required to take a written examination, at a date
-determined during the oral examination meeting. This examination will be based
-on the topics that arose during the oral examination and will not exceed three
-hours. The committee can then pass the student with no extra conditions, or be
-informed of weaknesses that should be addressed during the PhD work, e.g. in
-courses or in directed studies.
-
-\end{itemize}
-
-\item The Chair is to report in writing to the Chair of the Curriculum
-Committee on the outcome of the exam, with copies to candidate and examining
-committee.
-
-\end{enumerate}
-
-
-%C3.2.2  CHEMICAL OCEANOGRAPHY QE GUIDELINES
-\paragraph{Chemical Oceanography QE guidelines}\hfill
-
-\cp
-
-\p No discipline-specific guidelines--follow general Departmental guidelines.
-
-%C3.2.3  GEOLOGICAL OCEANOGRAPHY QE GUIDELINES
-\paragraph{Geological Oceanography QE guidelines}\hfill
-
-\cp
-
-\p No discipline-specific guidelines--follow general Departmental guidelines.
-
-%C3.2.4  PHYSICAL OCEANOGRAPHY QE GUIDELINES
-\paragraph{Physical Oceanography QE guidelines}\hfill
-\cp
-
-\p The core of the qualification process is an oral examination based on a reading
-list tailored to the student's research area. In some cases this may be
-followed by a written examination. The details and the timing are as follows.
-
-\p The PhD candidate prepares a brief (1 page) description of the intended area of
-research and sends it to the physical oceanography faculty members 5 weeks
-prior to the oral examination.
-
-\p Based on this document, each available faculty member in the sub-discipline
-contributes a paper to a reading list. This process is organized by the
-research supervisor, who then communicates the list to the student and the
-Physical Oceanography faculty members within 1 week of receipt of the student's
-research summary.
-
-\p Within 4 to 6 weeks, an oral examination is held, to test the student's
-comprehension of the reading list and its relevance to the intended research.
-The examination committee comprises all available faculty in the
-sub-discipline, a faculty member from another sub-discipline, and a
-Departmental representative.
-
-\p The possible outcomes of the oral examination are:
-\begin{itemize}
-\item The candidate passes without extra conditions
-
-\item The candidate passes, but is informed of weaknesses that should be
-addressed during the PhD work, e.g. to be addressed in courses or in directed
-studies
-
-\item The candidate is required to sit written examination, at a date
-determined during the oral examination meeting. This examination will be based
-on the topics arising during the oral defence.
-
-\end{itemize}
-
-
-
-%C3.3	QUALIFYING EXAMINATION OUTCOME
-\subsubsection{Qualifying Examination outcome}
-
-\cp
-\p There are several possible outcomes of the qualifying examination:
-
-\begin{itemize}
-
-\item Continuation in the PhD program with additional course work or directed studies
-\item Continuation in the PhD program without additional course work or directed studies
-\item Transfer to the MSc program
-\item Transfer to the PhD program with additional course work or directed studies
-\item Transfer to the PhD program without additional course work or directed studies
-\item Continuation in the MSc program
-
-\end{itemize}
+\input phd_qualifying_examination.tex
 
 % C4	PhD THESIS PROPOSAL AND DEFENCE
 \subsection{\label{sec:phd_thesis_proposal}PhD thesis proposal and defence}
