--- a/phd_qualifying_examination.tex
+++ b/phd_qualifying_examination.tex
@@ -3,7 +3,138 @@
 
 \cp
 
-\p The \di{qualifying examination} should be completed between months 9 and 12 of
+
+\hrule
+\textbf{WORK AREA \ldots taking content from BO*tex document}
+
+\sm[meetings/20160617/20160617_meeting_notes.jpg]}{mn20160617}
+
+\sm[meetings/20160708/20160708_meeting_notes.jpg]{mn20160708}
+
+\sm[marked_up_versions/bo_qe_20160708.pdf]{boqe}
+
+The \QE (\qe, henceforth) is an oral examination based on a reading list
+tailored to the PhD candidate's general research area. It is a Department
+process, not a Supervisory Committee process. The Department delegates its
+administration to the regular Professors in the student's subdiscipline(s).
+(If the student is co-supervised by an Adjunct Professor or a cross-listed
+Professor, then that individual also takes part in the \qe.)\discuss{DK: do I
+have this exception correct?}
+
+The \qe should be completed between months 9 and 12 of the PhD program.
+Students who have transferred from the MSc program should take the QE within 12
+months of their transfer.\discuss{DK: did we say that exceptions could be
+granted by the CurrComm?}
+
+The details and timing are as follows.
+
+\begin{enumerate}
+
+    \item The Candidate prepares a 1 to 3 page\discuss{DK: 
+        I change ``2 to 3'' to ``1 to 3'' based on our meeting; now, I propose
+        saying 500-word, as for meopar plain-language summary} summary of their
+        research interests and forwards it to their Supervisor for approval.
+        The summary is intended to guide faculty members in compiling a reading
+        list.  The research summary is not to be used as source material during
+        the exam.
+
+    \item Once approved, the Supervisor forwards the summary to faculty members
+        in the student's subdiscipline(s)\discuss{DK: I changed
+        ``subdiscipline'' to ``subdiscipline(s)''.}, along with a request that
+        they, and the Supervisor, each provide one or two papers (book chapters
+        are also acceptable) to make up a reading list that is relevant to the
+        summary. At least three faculty members, including the supervisor, must
+        contribute to the reading list. The list must contain between 4 and 6
+        papers\discuss{DK: I wrote in ``6'' here \ldots I don't recall if we
+        set a limit, and I've seen more than 6, but I don't want us sliding
+        into a system where every prof gives 2 papers so we can have 10 papers
+        in total, potentially}. The suggested papers must be forwarded to the
+        Supervisor within 2 weeks of the request.\discuss{I don't understand
+        this forwarding.}
+
+    \item The Advisor vets the papers to ensure appropriateness, and then
+        distributes the list to the Candidate and the relevent
+        faculty.\discuss{DK: this vetting has been controversial, I think, and
+        we should discuss it in GOC.}
+        
+            
+            The qualifying exam must be held within 6 weeks of the reading list
+            being distributed. 
+
+\item It is the responsibility of the Advisor to form the Examining Committee and schedule the exam. The committee must include a Chair drawn from the non-BO Oceanography faculty, at least three members of the BO faculty including the Advisor, and an External Examiner drawn from the Oceanography faculty outside the BO sub-discipline and preferably in a sub-discipline closely related to the candidate’s research interests. In exceptional circumstances an External from outside the department may be nominated by the Advisor. The nomination must be approved by at least three BO faculty members. The nominee must have no conflict of interest with the Candidate’s research programme. 
+
+\item The form of the Examining Committee must be approved by at least three members of the BO faculty no later than 3 weeks prior to the date of the exam. Once approved, the Advisor forwards the research summary, the reading list, and these guidelines to the External Examiner and to the Chair. The External is not required to read the listed papers. At the same time, the Candidate is advised of the committee membership. 
+
+\item The Chair moderates the exam (see guidelines below) and does not participate in questioning. Ideally, the exam will last no longer than 1.5 hours. The exam will begin with a 20-minute presentation by the Candidate who will attempt to synthesise the concepts and contents of the papers, highlighting the common threads and aspects that are relevant to their research interests.
+
+\item The committee then questions the Candidate about oceanography and topics related to the Candidate’s research interests where the entry points into questions and discussions are to be based on the reading material that was provided to the Candidate and Candidate’s presentation. The exam is not about the proposed research.
+
+\item Upon the completion of questioning, the committee will meet in camera to agree on the exam outcome and recommendations to the Candidate and their advisory committee, as appropriate.
+
+\item The possible outcomes of the written examination are:
+\begin{enumerate}
+\item The candidate passes with distinction and no extra conditions.
+\item The candidate passes without extra conditions.
+\item The candidate passes, but is informed of weaknesses that should be addressed during the PhD work, in the form of courses, audits, or directed studies.
+\item The candidate is required to take a written examination where in the format and time line for the exam will determined by the examining committee while meeting in camera. This examination will be based on the topics that arose during the oral examination and will not exceed three hours. 
+\end{enumerate}
+
+\item The possible outcomes of the written examination are:
+\begin{enumerate}
+\item The candidate passes without extra conditions.
+\item The candidate passes, but is informed of weaknesses that should be addressed during the PhD work, in the form of courses, audits, or directed studies.
+\item The candidate is transferred to, or continued in the MSc programme.
+\end{enumerate}
+
+\item The Chair shall report in writing to the Department Chair and the departmental Graduate Co-ordinator and will summarise the procedure and outcome of the exam. Copies of the report will be forwarded to the Candidate and the Examining Committee.
+
+\end{enumerate}
+
+Guidelines for the Chair of the Biological Oceanography PhD Qualifying Exam
+\begin{itemize}
+\item The Exam:
+\begin{itemize}
+\item Introduce the Candidate, the External and the Examining Committee as needed
+\item Summarise exam procedure: presentation, questioning, in camera meeting, decision and recommendation
+\item Keep presentation by the Candidate to 20 minutes; at 25 warn a cut off
+\item Announce the questioning order, beginning with External and ending with Advisor 
+\item Maximum two rounds of questioning; the second shorter than the first
+\item Keep questioners on time; first round 10 min. max with more (~15 min.) for the External
+\item Keep notes on the time used by questioners
+\item Don’t let questioners go astray – keep everyone on track
+\item Don’t allow Advisor to answer questions directed at student
+\item Keep the process just, calm and professional
+\item Entire exam should last no longer than 1.5 hrs. 
+\item Keep notes on significant issues during questioning
+\end{itemize}
+
+\item In Camera meeting:
+\begin{itemize}
+\item Remind the Examining Committee of the Defence outcome options (above).
+\item Ask for recommendation and comments from the External first.
+\item Ask remainder of the Committee, in order of questioning, for their recommendation and comments.
+\item Chair the deliberations toward a unanimous decision or at very least a consensus on the outcome.
+\item Keep notes on significant issues as they should be included in the report sent to the Chair and the departmental Graduate Co-ordinator.
+\end{itemize}
+
+\item The Report:
+\begin{itemize}
+\item The examination Chair shall submit a written report to the Chair of the Department and the departmental Graduate Co-ordinator. The report shall include a written description of the procedure and outcome of the exam and associated recommendations. The report shall be included in the Candidate’s departmental file.
+\end{itemize}
+
+\end{itemize}
+
+\hrule
+
+
+%% these are from the BIO-OCEA document
+
+\p The \di{PhD qualifying examination} is an oral examination based on a
+reading list tailored to the PhD candidate's research area. The details and the
+timing are as follows.
+
+\p The candidate prepares a 1 to 3 page\discuss{DK: I suggest 1 page, max.} 
+should be completed between months 9 and 12 of
 the program.  Students transferring from the MSc program should take the
 qualifying examinations within 12 months of their transfer.
 
@@ -39,7 +170,11 @@ research.
 
 %C3.2.1  BIOLOGICAL OCEANOGRAPHY QE GUIDELINES
 
+\hrule
+
 \input{BO_Qualifying_Aug2013_draft.tex}
+
+\hrule
 
 \paragraph{Biological Oceanography QE guidelines}\hfill
 
