done to end of MSc (line 959)

--- a/phd_qualifying_examination.tex
+++ b/phd_qualifying_examination.tex
@@ -7,11 +7,11 @@
 \hrule
 \textbf{WORK AREA \ldots taking content from BO*tex document}
 
-\sm[meetings/20160617/20160617_meeting_notes.jpg]}{mn20160617}
+\texttt{meetings/20160617/20160617\_meeting\_notes.jpg}
 
-\sm[meetings/20160708/20160708_meeting_notes.jpg]{mn20160708}
+\texttt{meetings/20160708/20160708\_meeting\_notes.jpg}
 
-\sm[marked_up_versions/bo_qe_20160708.pdf]{boqe}
+\texttt{marked\_up\_versions/bo\_qe\_20160708.pdf}
 
 The \QE (\qe, henceforth) is an oral examination based on a reading list
 tailored to the PhD candidate's general research area. It is a Department
